@@ -1,3 +1,4 @@
+* #2268 Allow removing downloads from the clipboard while in progress. (tomeu)
 * #2240 Ensure activity uniquness in the shell. (marco)
 
 Snapshot f6f3f2b520
